入力解析とグラフクラスを作成

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="src/index.js"></script>
     </head>
     <body>
-        <h1>木の描画</h1>
+        <h1>二分木の描画</h1>
         <div
             style="display: flex; flex-direction: row; gap: 100px;">
             <div>
@@ -21,9 +21,7 @@
                     style="resize: none;"></textarea>
                 <p>例</p>
                 <ul>
-                    <li>u v: 頂点uから頂点vへ辺をはる</li>
-                    <li>u v s: 頂点uから頂点vへの辺にラベルsをつける</li>
-                    <li>u s: 頂点uにラベルlをつける</li>
+                    <li>u v: 頂点uとvを結ぶ無向辺を追加</li>
                 </ul>
             </div>
             <div>
