エラーメッセージを表示するようにした。draw()の作成に入る

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     rows="20"
                     cols="30"
                     style="resize: none;"></textarea>
+                <p
+                        id="error_output"
+                        style="color: red;"></p>
+
                 <p>例</p>
                 <ul>
                     <li>u v: 頂点uとvを結ぶ無向辺を追加</li>
