canvasクラスにグラフ描画apiを実装し始める

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 <html lang="ja">
     <head>
-        <meta charset="utf8">
+        <meta charset="utf-8">
         <title>TreeVis</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="data:image/x-icon;,">
         <script src="src/index.js"></script>
     </head>
     <body>
-        <h1>二分木の描画</h1>
+        <h1>TreeVis/二分木の描画</h1>
         <div
             style="display: flex; flex-direction: row; gap: 100px;">
             <div>
