よくわからないけど動く線形配置アルゴリズムができた

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="src/index.js"></script>
     </head>
     <body>
-        <h1>TreeVis/二分木の描画</h1>
+        <h1>TreeVis/木の描画</h1>
         <div
             style="display: flex; flex-direction: row; gap: 100px;">
             <div>
