根を指定する機能をつけた

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                     rows="20"
                     cols="30"
                     style="resize: none;"></textarea>
+                <p style="margin: 0;">根を指定(未指定のとき最小要素を根とする)</p>
+                <input
+                        id="root_input"
+                        type="number">
+
                 <p
                         id="error_output"
                         style="color: red;"></p>
