描画設定をいじれるようにした

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
                     rows="20"
                     cols="30"
                     style="resize: none;"></textarea>
+                <div>
+                    <p style="margin: 0;">横幅</p>
+                    <input type="range" min="100" max="1500" value="500" id="width_input">
+
+                    <p style="margin: 0;">縦幅</p>
+                    <input type="range" min="100" max="1500" value="500" id="height_input">
+
+                    <p style="margin: 0;">頂点半径</p>
+                    <input type="range" min="5" max="50" value="10" id="radius_input">
+                </div>
                 <p style="margin: 0;">根を指定(未指定のとき最小要素を根とする)</p>
                 <input
                         id="root_input"
