pngとして保存する機能を追加

--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
                     <p style="margin: 0;">頂点半径</p>
                     <input type="range" min="5" max="50" value="10" id="radius_input">
                 </div>
+                <div>
                 <p style="margin: 0;">根を指定(未指定のとき最小要素を根とする)</p>
                 <input
                         id="root_input"
                         type="number">
+                </div>
+
+                <div>
+                    <button id="download_as_png">png画像として保存</button>
+                </div>
 
                 <p
                         id="error_output"
